charts/workflows/test-policy/workloadpriorityclass/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: workloadpriorityclass
spec:
  steps:
    - try:
        - apply:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: standard
                annotations:
                  workflows.diamond.ac.uk/type: "standard"
              spec: {}
        - assert:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: standard
              spec:
                podMetadata:
                  labels:
                    kueue.x-k8s.io/priority-class: medium
        - apply:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: default
              spec: {}
        - assert:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: default
              spec:
                podMetadata:
                  labels:
                    kueue.x-k8s.io/priority-class: medium
        - apply:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: live
                annotations:
                  workflows.diamond.ac.uk/type: "live"
              spec: {}
        - assert:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: live
              spec:
                podMetadata:
                  labels:
                    kueue.x-k8s.io/priority-class: high
        - apply:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: test
                annotations:
                  workflows.diamond.ac.uk/type: "test"
              spec: {}
        - assert:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: test
              spec:
                podMetadata:
                  labels:
                    kueue.x-k8s.io/priority-class: low
        - error:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: invalid
                annotations:
                  workflows.diamond.ac.uk/type: "processing"
              spec: {}
        - error:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: manual-standard
              spec:
                podMetadata:
                  labels:
                    kueue.x-k8s.io/priority-class: medium

        # Test policy applies on Workflow UPDATE
        - apply:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: update-after-create
              spec: {}
        - assert:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: update-after-create
              spec:
                podMetadata:
                  labels:
                    kueue.x-k8s.io/priority-class: medium
        - apply:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: update-after-create
                annotations:
                  workflows.diamond.ac.uk/type: "live"
              spec: {}
        - assert:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: update-after-create
                annotations:
                  workflows.diamond.ac.uk/type: "live"
              spec:
                podMetadata:
                  labels:
                    kueue.x-k8s.io/priority-class: high

        # Test policy does not modify running Workflows
        - apply:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: update-while-running
                annotations:
                  workflows.diamond.ac.uk/type: "live"
              spec: {}
        - assert:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: update-while-running
              spec:
                podMetadata:
                  labels:
                    kueue.x-k8s.io/priority-class: high
        - apply:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: update-while-running
              status:
                phase: Running
              spec: {}

        - assert:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: update-while-running
              status:
                phase: Running

        - error:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: update-while-running
                annotations:
                  workflows.diamond.ac.uk/type: "test"
              spec:
                podMetadata:
                  labels:
                    kueue.x-k8s.io/priority-class: high

        # Verify that the rejected update has not changed the Workflow.
        - assert:
            resource:
              apiVersion: argoproj.io/v1alpha1
              kind: Workflow
              metadata:
                name: update-while-running
                annotations:
                  workflows.diamond.ac.uk/type: "live"
              spec:
                podMetadata:
                  labels:
                    kueue.x-k8s.io/priority-class: high
              status:
                phase: Running
